dark mode fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,6 @@ html, body {
     overflow: auto;
     margin: 0;
     text-align: justify;
-    background-color: transparent;
     font-family: 'Roboto', 'Open Sans', sans-serif;
 }
 
